2010-02-05  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/*.[ch]: Revert contravariant const qualifiers added 
	by the previous commit to keep codebase in sync with the Tile 
	extension, which must remain 8.4 compatible.

2010-02-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl: Follow-up to [2010-01-29] commit:
	        prevent space within stub table function parameters
	        if the parameter type is a pointer. Make the
	        various stub tables and hook pointers const,
	        just as Tcl and Tk.
	* generic/ttk/ttkDecls.h (regenerated)
    * generic/ttk/ttkStubInit.c (regenerated)
	* generic/ttk/ttk.decls Minor formatting
	* generic/ttk/ttkButton.c    Make more internal tables "const"
    * generic/ttk/ttkDefaultTheme.c
    * generic/ttk/ttkEntry.c
    * generic/ttk/ttkImage.c
    * generic/ttk/ttkInit.c
    * generic/ttk/ttkLayout.c
    * generic/ttk/ttkNotebook.c
    * generic/ttk/ttkPanedWindow.c
    * generic/ttk/ttkProgress.c
    * generic/ttk/ttkStubLib.c
    * generic/ttk/ttkTheme.c
    * generic/ttk/ttkTreeview.c
    * generic/ttk/ttkWidget.c
    * generic/ttk/ttkWidget.h

2010-01-31  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTheme.h, generic/ttk/ttkWidget.h, 
	generic/ttk/*.c: Change signature of widget subcommand
	procedures to match Tcl_ObjCmdProc.  Merge now-redundant
	ensemble dispatch code.

2010-01-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl: No longer generate a space after "*" and
	                        immediately after a function name, so the
	                        format of function definitions in *Decls.h 
	                        match all other *.h header files.
	* generic/ttk/ttkDecls.h (re-generated)
	* generic/tk.decls       Formatting
	* generic/tkDecls.h      (re-generated)
	* generic/tkIntDecls.h
	* generic/tkIntPlatDecls.h
	* generic/tkIntXlibDecls.h
	* generic/tkPlatDecls.h
	* generic/tkBind.c     Little simplification
